--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     <li><a href="contacts.html">Contacts</a></li>
                 </ul>
                 <ul class="user-navigation">
-                    <li class="login-link">LogIn</li>
+                    <li class="login-link">
+                        <a class="login-link" href="login.html">Login</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -91,10 +93,10 @@
                                  height="164" alt="Interier"></a>
 
             </figure>
-            <span class="button gallery-button gallery-button-back"
-                  >Back</span>
-            <span class="button gallery-button gallery-button-next"
-            >Next</span>
+            <button class="button gallery-button gallery-button-back"
+                  >Back</button>
+            <button class="button gallery-button gallery-button-next"
+            >Next</button>
         </section>
 
         <!-- CONTACT INFO AND FOOTER  -->
@@ -118,10 +120,10 @@
         <section class="appointment">
             <h2>Reservate</h2>
             <p class="appointment-info">Write your date and time reservation</p>
-            <form class="appointment-form" action="https://echo.htmlacademy.ru" method="posd">
+            <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
                 <p class="appointment-item">
-                Date
-                <input type="text" name="name" value="" placeholder="09.01.2018">
+                    <label for="appointment-date">Date</label>
+                    <input id="appointment-date" type="text" name="date" value="" placeholder="01.02.2018">
             </p>
                 <p class="appointment-item">
                     Time
