--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
             <p>Write yout login and password.</p>
             <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
                 <p>
-                    <label class="visually-hidden" for="user-login">"login</label>
+                    <label class="visually-hidden" for="user-login">login</label>
                     <input class="login-icon-user" id="user-login" type="text" name="login" placeholder="Login">
                 </p>
                 <p>
-                    <label class="visually-hidden" for="user-password">"Password</label>
+                    <label class="visually-hidden" for="user-password">Password</label>
                     <input class="login-icon-password" id="user-password" type="password" name="password" placeholder="Password">
                 </p>
                 <p class="login-password-info">
